--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width initial-scale=1.0">
         <title>Home | Appeperia</title>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=Open+Sans:wght@300;400;700&display=swap"
         rel="stylesheet">
@@ -14,7 +15,7 @@
 
     <body>
         <!--header>img+nav>ul>li*6>a ~> esse é um modo de se escrever mais rápidamente o código-->
-        <header class="cabecalho">
+        <header class="cabecalho container">
             <img src="img/logo-apeperia.svg" alt="Logo da Apeperia" class="cabecalho__logo">
             <nav class="cabecalho__navegacao">
                 <ul>
@@ -29,10 +30,10 @@
         </header>
         <main>
             <!-- section>h1+p+a ~> esse é um modo de se escrever mais rápidamente o código -->
-            <section class="chamada">
+            <section class="chamada container">
                 <h1 class="chamada__titulo">Aplicativos Na Medida</h1>
                 <p class="chamada__texto">Apeperia tem um jeito inovador de comparar e montar aplicativos para pequenas e médias empresas.</p>
-                <a href="#" class="chamada__botao">Conheça os planos</a>
+                <a href="#" class="chamada__botao botao">Conheça os planos</a>
             </section>
         </main>  
     </body>
