--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <link href="css/diferenciais.css" rel="stylesheet">
         <link href="css/sobre.css" rel="stylesheet">
         <link href="css/planos.css" rel="stylesheet">
+        <link href="css/contato.css" rel="stylesheet">
+        <link href="css/institucional.css" rel="stylesheet">
+        <link href="css/rodape.css" rel="stylesheet">
     </head>
 
     <body>
@@ -62,7 +65,7 @@
 
             <!-- section.diferenciais.container>ul.diferenciais__item>(li.diferenciais__item>h2.item__titulo+p.item__texto)*3 -->
             <section class="diferenciais container">
-                <ul class="diferenciais__item">
+                <ul class="diferenciais__lista">
                     <li class="diferenciais__item diferenciais__item--tempo">
                         <h2 class="item__titulo">Tempo</h2>
                         <p class="item__texto">Tempo é importante! Trabalhamos em ritmo acelerado, atendendo rigorosamente aos prazos.</p>
@@ -80,60 +83,109 @@
 
             <!-- section.sobre.container>h2.sobre__titulo+(p.sobre__texto.sobre__texto--destaque)*3+(img.sobre__plataformas)*4+p.sobre__texto.sobre__texto--destaque -->
             <section class="sobre container">
-                <h2 class="sobre__titulo">Sobre</h2>
-                <p class="sobre__texto">Criamos aplicativos personalizados para todas as pessoas!</p>
-                <p class="sobre__texto">A manutenção de um aplicativo não pode ser um custo extra para o cliente, Na Apeperia você assina nosso serviço e a manutenção já está inclusa. Assim, você não se preocupa com manutenção, é tudo por nossa conta.</p>
-                <p class="sobre__texto sobre__texto--destaque">Conte com uma equipe especializada e exclusiva pra projetos incríveis em qualquer plataforma.</p>
-                <ul class="sobre__plataformas">   
-                    <img src="img/android.png" alt="" class="sobre__plataformas">
-                    <img src="img/blackberry.png" alt="" class="sobre__plataformas">
-                    <img src="img/apple.png" alt="" class="sobre__plataformas">
-                    <img src="img/windowsphone.png" alt="" class="sobre__plataformas">
-                </ul>
-                <p class="sobre__texto">Desenvolvemos aplicativos para todas as plataformas</p>
+                <div class="sobre__conteudo">
+                    <h2 class="sobre__titulo">Sobre</h2>
+                    <p class="sobre__texto">Criamos aplicativos personalizados para todas as pessoas!</p>
+                    <p class="sobre__texto">A manutenção de um aplicativo não pode ser um custo extra para o cliente, Na Apeperia você assina nosso serviço e a manutenção já está inclusa. Assim, você não se preocupa com manutenção, é tudo por nossa conta.</p>
+                    <p class="sobre__texto sobre__texto--destaque sobre__texto--divisao">Conte com uma equipe especializada e exclusiva pra projetos incríveis em qualquer plataforma.</p>
+                    <ul class="sobre__plataformas">   
+                        <img src="img/android.png" alt="" class="sobre__plataformas">
+                        <img src="img/blackberry.png" alt="" class="sobre__plataformas">
+                        <img src="img/apple.png" alt="" class="sobre__plataformas">
+                        <img src="img/windowsphone.png" alt="" class="sobre__plataformas">
+                    </ul>
+                    <p class="sobre__texto">Desenvolvemos aplicativos para todas as plataformas</p>
+                </div>
+
+                <img src="img/sobre-apeperia.png" alt="Sobre a Apeperia" class="sobre__imagem">
             </section>
             
             <!-- section.planos.container>h2.planos__titulo+ul.planos__cartoes>(li.cartao--start>h3.cartao__titulo+article.cartao__conteudo>p.cartao__preco+p.cartao__texto*3+a.cartao__botao.cartao__botao--start.botao)*3 -->
             <section class="planos container">
                 <h2 class="planos__titulo"></h2>
                 <ul class="planos__cartoes">
-                    <li class="cartao--start">
+                    <li class="cartao cartao--start">
                         <h3 class="cartao__titulo">Start</h3>
                         <article class="cartao__conteudo">
                             <p class="cartao__preco">R$ 500</p>
                             <p class="cartao__texto">5 manutenções mensais</p>
                             <p class="cartao__texto">App SEO</p>
                             <p class="cartao__texto">1 sistema operacional</p>
+                            <a href="plano.html" class="cartao__botao cartao__botao--start botao">Assinar plano</a>
+                        </article>
+                    </li>
+                    <li class="cartao cartao--ultra">
+                        <h3 class="cartao__titulo">Ultra</h3>
+                        <article class="cartao__conteudo">
+                            <p class="cartao__preco">R$ 1500</p>
+                            <p class="cartao__texto">20 manutenções mensais</p>
+                            <p class="cartao__texto">App SEO</p>
+                            <p class="cartao__texto">4 sistemas operacionais</p>
+                            <p class="cartao__texto">24h de atendimento</p>
                             <a href="" class="cartao__botao cartao__botao--start botao">Assinar plano</a>
                         </article>
                     </li>
-                    <li class="cartao--start">
-                        <h3 class="cartao__titulo"></h3>
+                    <li class="cartao cartao--mega">
+                        <h3 class="cartao__titulo">Mega</h3>
                         <article class="cartao__conteudo">
-                            <p class="cartao__preco"></p>
-                            <p class="cartao__texto"></p>
-                            <p class="cartao__texto"></p>
-                            <p class="cartao__texto"></p>
-                            <a href="" class="cartao__botao cartao__botao--start botao"></a>
-                        </article>
-                    </li>
-                    <li class="cartao--start">
-                        <h3 class="cartao__titulo"></h3>
-                        <article class="cartao__conteudo">
-                            <p class="cartao__preco"></p>
-                            <p class="cartao__texto"></p>
-                            <p class="cartao__texto"></p>
-                            <p class="cartao__texto"></p>
-                            <a href="" class="cartao__botao cartao__botao--start botao"></a>
+                            <p class="cartao__preco">R$ 1000</p>
+                            <p class="cartao__texto">10 manutenções mensais</p>
+                            <p class="cartao__texto">App SEO</p>
+                            <p class="cartao__texto">2 sistemas operacionais</p>
+                            <a href="" class="cartao__botao cartao__botao--start botao">Assinar plano</a>
                         </article>
                     </li>
                 </ul>
             </section>
 
+            <section class="contato container">
+                <h2 class="contato__titulo">Contato</h2>
+                <p>Entre em contato com a gente</p>
+                <a href="contato.html" class="contato__botao botao">Entre em contato</a>
+            </section>
 
+            <!-- section.institucional.container>h2.institucional__titulo+p.institucional__descricao+adress.institucional__endereco>artile.institucional__contato>p>a.institucional__conato-telefone+a.institucional.contato-email -->
+            <section class="institucional container">
+                <h2 class="institucional__titulo">Institucional</h2>
+                <div class="institucional__conteudo">
+                    <div class="institucional__informacoes">
+                        <p class="institucional__descricao">Um pouco mais sobre a Apeperia</p>
+                        <br class="institucional__endereco">
+                            Rua Vergueiro, 3185</br>
+                            Vila Mariana, São Paulo
+                            <artile class="institucional__contato">
+                                <p><a href="tel:+551155712751" class="institucional__contato-telefone">(11) 5571-2751 ou</a>
+                                    <a href="mailto:contato@appeperia.com" class="institucional__contato-email">contato@apeperia.com</a>
+                                </p>
+                            </artile>
+                        </adress>
+                    </div>
+                <video src="img/formacao-java.mp4" class="institucional__video" controls></video>
+                </div>
+            </section>
 
+            <!-- footer.rodape.container>img.rodape__logo+(ul.rodape__social>li>(a.rodape__midia>img)*3)>nav.rodape__navegacao>ul.rodape__navegacao>(li.rodape__link>a)*6 -->
+            <footer class="rodape container">
+                <img src="img/logo-apeperia.svg" alt="Logo Apeperia" class="rodape__logo">
+                <ul class="rodape__social">
+                    <li>
+                        <a href="#" class="rodape__midia"><img src="img/facebook.png" alt="Icone Facebook"></a>
+                        <a href="#" class="rodape__midia"><img src="img/twitter.png" alt="Icone Twiter"></a>
+                        <a href="#" class="rodape__midia"><img src="img/instagram.png" alt="Icone Instagram"></a>
+                    </li>
+                </ul>
+                <nav class="rodape__navegacao">
+                    <ul class="rodape__navegacao">
+                        <li class="rodape__link"><a href="#">Sobre</a></li>
+                        <li class="rodape__link"><a href="#"></a>Planos</li>
+                        <li class="rodape__link"><a href="#"></a>Blog</li>
+                        <li class="rodape__link"><a href="#"></a>Destaques</li>
+                        <li class="rodape__link"><a href="#"></a>Institucional</li>
+                        <li class="rodape__link"><a href="#"></a>Contato</li>
+                    </ul>
+                </nav>
+            </footer>
 
-            
         </main>  
     </body>
 </html>
